# openoms

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  Makefile  TODO.md  compose.oms.yaml  readme.md  test-cancel.json  test-submit.json
.github/workflows/: build.yml  deploy.yml
assets/: openOMS Brand 03.dc.html
cockpit/: README.md  index.html  package-lock.json  package.json  vite.config.ts
cockpit/src/: App.tsx  main.tsx  theme.ts
cockpit/src/api/: client.ts  hooks.ts  types.ts
cockpit/src/components/: CrudResource.tsx  InstrumentSelect.tsx  Logo.tsx  StreamHealthStrip.tsx
cockpit/src/pages/: Accounts.tsx  ApiDocs.tsx  Architecture.tsx  Blotter.tsx  BrokerConnections.tsx  DataFeeds.tsx  Instruments.tsx  Portfolios.tsx  Principals.tsx  Reconciliation.tsx  RiskLimits.tsx  Universes.tsx
crates/dataprovider/: Cargo.toml
crates/dataprovider/examples/: probe.rs
crates/dataprovider/src/: enrich.rs  error.rs  instrument.rs  lib.rs  provider.rs  quote.rs  universe.rs
crates/dataprovider/src/enrichers/: mod.rs  openfigi.rs
crates/dataprovider/src/providers/: databento.rs  mod.rs
crates/symbology/: Cargo.toml
crates/symbology/examples/: identify.rs
crates/symbology/src/: cache.rs  error.rs  exchange.rs  identifier.rs  identity.rs  lib.rs  openfigi.rs  provider.rs  query.rs
db/access/: ods.sql  roles.sql
db/migrations/ods/oms/: 0001_CREATE_PRINCIPAL_TABLE.sql  0002_CREATE_BOOK_TABLE.sql  0002_CREATE_PORTFOLIO_TABLE.sql  0002_order_state.sql  0003_CREATE_ACCOUNT_TABLE.sql  0003_CREATE_BROKER_CONNECTION_TABLE.sql  0003_identity.sql  0004_CREATE_ACCOUNT_TABLE.sql  0004_CREATE_PRINCIPAL_BOOK_ACCOUNT_GRANT_TABLE.sql  0004_api_keys.sql  0005_CREATE_PRINCIPAL_PORTFOLIO_ACCOUNT_GRANT_TABLE.sql  0005_CREATE_PRINCIPAL_PORTFOLIO_GRANT_TABLE.sql  0005_risk_limits.sql  0006_CREATE_ORDER_EVENT_TABLE.sql  0006_CREATE_ORDER_STATE_TABLE.sql  0007_CREATE_ORDER_STATE_TABLE.sql  0009_CREATE_RISK_LIMITS_TABLE.sql  0010_ALTER_PORTFOLIO_ADD_DEFAULT_ACCOUNT.sql  0011_CREATE_POSITION_TABLE.sql  0012_CREATE_ALLOCATION_TABLE.sql  0013_CREATE_RECON_RUN_TABLE.sql  0014_CREATE_RECON_BREAK_TABLE.sql  0015_CREATE_INSTRUMENT_XREF_TABLE.sql  0016_ALTER_XREF_ADD_BROKER_CONFIG.sql  0017_XREF_IDENTITY_IS_SYMBOL_VENUE.sql  0018_CREATE_PROVIDER_FEED_POLICY.sql  0019_DROP_INSTRUMENT_XREF.sql
db/migrations/ods/public/: 0001_CREATE_VENUE_TABLE.sql  0001_reference.sql  0002_CREATE_CURRENCY_TABLE.sql  0002_instruments.sql  0003_CREATE_INSTRUMENT_TABLE.sql  0003_market_data.sql  0003_provider_instrument.sql  0004_CREATE_INSTRUMENT_DERIVATIVE_TABLE.sql  0004_calendars.sql  0005_CREATE_BROKER_INSTRUMENT_TABLE.sql  0005_broker_instrument_native_id.sql  0006_CREATE_PROVIDER_INSTRUMENT_TABLE.sql  0006_rename_provider_instrument.sql  0007_CREATE_CALENDAR_TABLE.sql  0008_CREATE_CALENDAR_HOLIDAY_TABLE.sql  0009_CREATE_INSTRUMENT_UNIVERSE_TABLE.sql  0010_CREATE_INSTRUMENT_UNIVERSE_SYMBOL_TABLE.sql  0011_ALTER_INSTRUMENT_ADD_FIGI.sql  0012_DROP_LEGACY_BRIDGES.sql  0013_ALTER_INSTRUMENT_UNIVERSE_DROP_ENABLED.sql  0014_ALTER_INSTRUMENT_UNIVERSE_ADD_PARTIAL_STATUS.sql  0015_CRYPTO_SYMBOL_IS_THE_PAIR.sql  0016_CREATE_BROKER_INSTRUMENT_TABLE.sql  0017_CREATE_FEED_INSTRUMENT_TABLE.sql  0018_DROP_INSTRUMENT_UNIVERSE.sql  0019_DROP_BROKER_INSTRUMENT_NATIVE_UQ.sql  0020_DROP_FEED_INSTRUMENT.sql
db/scripts/: access.sh  backfill_xref.sql  fixtures.sh  migrate.sh  provision.sh  seed.sh  seed_binance_crypto.sql  seed_crypto_venues.sql  seed_currencies.sql  seed_live.sh  seed_universes.sql  seed_venues.py
docs/: oems-feature-gap.md
docs/tutorials/: opra-marks-pnl.md
examples/: opra_playground.rs
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_order_state.down.sql  000002_order_state.up.sql  000003_auth_identity.down.sql  000003_auth_identity.up.sql  000004_principal_account_book.down.sql  000004_principal_account_book.up.sql  000005_account_environment.down.sql  000005_account_environment.up.sql  000006_api_keys.down.sql  000006_api_keys.up.sql  000007_instruments.down.sql  000007_instruments.up.sql  000008_rename_to_mdm.down.sql  000008_rename_to_mdm.up.sql
scripts/: .env.example  add_nvda_instrument.py  broker_sync.py  create_auth_identity.py  requirements.txt  seed_instruments.py  send_test_order.py  setup_master_data.py  submit_order.py
scripts/fixtures/: dev_identity.sql  minimal_seed.sql
src/: admin.rs  alpaca_stream.rs  app_state.rs  auth.rs  binance_feed.rs  binance_stream.rs  bybit_feed.rs  db.rs  event_store.rs  execution.rs  feeds.rs  handlers.rs  kafka.rs  main.rs  mark_router.rs  marks.rs  models.rs  opra_stream.rs  positions.rs  preflight.rs  projector.rs  quote_feed.rs  recon.rs  risk_engine.rs  stream_health.rs  stream_supervisor.rs  symbology_resolver.rs
src/adapters/: alpaca.rs  binance.rs  ibkr.rs  mod.rs
src/domain/: identity.rs  mod.rs
src/domain/orders/: README.md  aggregate.rs  commands.rs  errors.rs  events.rs  fixtures.rs  invariants.rs  lifecycle.rs  mod.rs  risk.rs  state.rs
src/routing/: engine.rs  policy.rs  types.rs
src/services/: order_service.rs
src/setup/: bootstrap.rs  brokers.rs  catalog.rs  feeds.rs  mod.rs  universe.rs
