[package]
name = "rustoms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
dotenvy = "0.15"

# Kafka producer
rdkafka = { version = "0.34", features = ["tokio"] }
