[workspace]
members = [".", "crates/symbology", "crates/dataprovider"]
resolver = "2"

[package]
name = "rustoms"
version = "0.1.0"
edition = "2021"
default-run = "oms"

# The server + setup CLI ships as the `oms` binary (`oms setup universe …`).
[[bin]]
name = "oms"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
base64 = "0.22"
bcrypt = "0.15"
databento = { version = "0.54.0", default-features = false, features = ["live", "chrono"]}

# Binance request signing (Ed25519 over the query string; also for the WS-API
# session.logon). Ed25519 is the only key type Binance supports for the WebSocket
# user-data stream, so we use it for REST signing too — one credential.
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

# Kafka producer
rdkafka = { version = "0.34", features = ["tokio"] }

# Async trait support for dyn-compatible broker adapters
async-trait = "0.1"

scalar_api_reference = { version = "0.1.0", features = ["axum"] }

# OpenAPI spec generation
utoipa = { version = "4", features = ["uuid", "chrono"] }

# Alpaca trade-update WebSocket stream
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
domain = "0.12.1"

# In-repo instrument identification (OpenFIGI symbology engine)
symbology = { path = "crates/symbology" }

# In-repo data-provider abstraction (universe discovery + seeding + enrichment)
dataprovider = { path = "crates/dataprovider" }

# CLI (oms setup universe …)
clap = { version = "4", features = ["derive"] }
