[package]
name = "symbology"
version = "0.1.0"
edition = "2021"
description = "Identify financial instruments to a canonical FIGI identity via OpenFIGI."
license = "MIT"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt"] }
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
